# 4K-Fit-Crop

./: README.md  optimize_4k.py  pyproject.toml
docs/plans/: 2026-02-27-auto-workers-design.md  2026-02-27-auto-workers.md
