[project]
name = "4k-fit-crop"
version = "1.2.1"
description = "고해상도 이미지를 4K(3840x2160) 월페이퍼로 최적화하는 도구"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "deuxk" }
]
keywords = ["image", "4k", "wallpaper", "imagemagick", "optimizer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "tqdm>=4.66.0",
]

[project.scripts]
optimize-4k = "optimize_4k:main"

[project.urls]
Homepage = "https://github.com/deuxk/4K-Fit-Crop"
Repository = "https://github.com/deuxk/4K-Fit-Crop"
Issues = "https://github.com/deuxk/4K-Fit-Crop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]
